--- a/package.json
+++ b/package.json
@@ -11,20 +11,27 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.31.4",
+    "@t3-oss/env-nextjs": "^0.13.8",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "next": "^15.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "tailwindcss": "^3.0.0"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@types/node": "24.3.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.0.0",
     "eslint-config-next": "^12.0.0",
-    "prettier": "^2.0.0"
+    "postcss": "^8.5.6",
+    "prettier": "^2.0.0",
+    "tailwindcss": "^4.1.12"
   }
 }
