--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@types/react-dom": "^19.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "env-nextjs": "^1.0.1",
     "framer-motion": "^12.23.12",
+    "marked": "^5.1.1",
     "next": "^15.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,9 +30,13 @@
   },
   "devDependencies": {
     "@types/node": "24.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.0.0",
     "eslint-config-next": "^12.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "postcss": "^8.5.6",
     "prettier": "^2.0.0",
     "tailwindcss": "^4.1.12"
