Project final version

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,9 @@
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
+    "import/no-case-sensitive-paths": "error"
+  },
+  "rules": {
     "react/react-in-jsx-scope": "off",
     "no-unused-vars": "warn",
     "@typescript-eslint/no-unused-vars": ["warn", {}],
