--- a/package.json
+++ b/package.json
@@ -10,21 +10,28 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.31.4",
     "@floating-ui/react": "^0.27.16",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.56.0",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "env-nextjs": "^1.0.1",
     "framer-motion": "^12.23.12",
     "marked": "^5.1.1",
+    "marked-gfm-heading-id": "3.1.3",
+    "marked-mangle": "^1.1.11",
     "next": "^15.5.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-turnstile": "^1.1.4",
+    "serve": "^14.2.4",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.1"
   },
