--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "env-nextjs": "^1.0.1",
     "framer-motion": "^12.23.12",
+    "html-react-parser": "^5.2.6",
     "marked": "^5.1.1",
     "marked-gfm-heading-id": "3.1.3",
     "marked-mangle": "^1.1.11",
